okay nav bar on bottom is no longer present on mobile. need to fix contact information now. changed CSS so all parallax are height 100 instead of having to set each parallax in the html

--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body, html {
 .parallaxVEX,
 .parallaxCodeQuest {
     background-image: relative;
+    height: 100%;
 
     background-attachment: fixed;
     background-position: center;
